# ComfyUI-APISR

./: Apisr.py  README.md  __init__.py  pyproject.toml  requirements.txt
APISR WORKFLOWS/: APISR img or video Batch【Zho】.json  APISR img or video Iterative【Zho】.json  APISR img or video Lterative【Zho】.json
architecture/: grl.py
architecture/grl_common/: __init__.py  mixed_attn_block.py  mixed_attn_block_efficient.py  swin_v1_block.py  swin_v2_block.py
test_code/: test_utils.py
